crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__A006_A006.py.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
A006.py:1:8: A006 (builtin-lambda-argument-shadowing) Lambda argument `print` is shadowing a Python builtin
  |
1 | lambda print, copyright: print
  |        ^^^^^ A006 (builtin-lambda-argument-shadowing)
2 | lambda x, float, y: x + y
3 | lambda min, max: min
  |

A006.py:1:15: A006 (builtin-lambda-argument-shadowing) Lambda argument `copyright` is shadowing a Python builtin
  |
1 | lambda print, copyright: print
  |               ^^^^^^^^^ A006 (builtin-lambda-argument-shadowing)
2 | lambda x, float, y: x + y
3 | lambda min, max: min
  |

A006.py:2:11: A006 (builtin-lambda-argument-shadowing) Lambda argument `float` is shadowing a Python builtin
  |
1 | lambda print, copyright: print
2 | lambda x, float, y: x + y
  |           ^^^^^ A006 (builtin-lambda-argument-shadowing)
3 | lambda min, max: min
4 | lambda id: id
  |

A006.py:3:8: A006 (builtin-lambda-argument-shadowing) Lambda argument `min` is shadowing a Python builtin
  |
1 | lambda print, copyright: print
2 | lambda x, float, y: x + y
3 | lambda min, max: min
  |        ^^^ A006 (builtin-lambda-argument-shadowing)
4 | lambda id: id
5 | lambda dir: dir
  |

A006.py:3:13: A006 (builtin-lambda-argument-shadowing) Lambda argument `max` is shadowing a Python builtin
  |
1 | lambda print, copyright: print
2 | lambda x, float, y: x + y
3 | lambda min, max: min
  |             ^^^ A006 (builtin-lambda-argument-shadowing)
4 | lambda id: id
5 | lambda dir: dir
  |

A006.py:4:8: A006 (builtin-lambda-argument-shadowing) Lambda argument `id` is shadowing a Python builtin
  |
2 | lambda x, float, y: x + y
3 | lambda min, max: min
4 | lambda id: id
  |        ^^ A006 (builtin-lambda-argument-shadowing)
5 | lambda dir: dir
  |

A006.py:5:8: A006 (builtin-lambda-argument-shadowing) Lambda argument `dir` is shadowing a Python builtin
  |
3 | lambda min, max: min
4 | lambda id: id
5 | lambda dir: dir
  |        ^^^ A006 (builtin-lambda-argument-shadowing)
  |
